--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/agarwal" />
+        android:layout_height="match_parent">
 
-    <TextView
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="740dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/agarwal" />
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="login"
@@ -126,11 +129,11 @@
             android:layout_alignBottom="@id/forgot"
             android:layout_alignParentRight="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginRight="126dp"
-            android:layout_marginBottom="-101dp"
+            android:layout_marginRight="301dp"
+            android:layout_marginBottom="-98dp"
             android:paddingRight="20dp"
             android:text="No. of attempts: 4"
             android:textColor="#FF4500" />
 
-
     </RelativeLayout>
+    </ScrollView>
