--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Register">
-
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        >
+     
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="740dp"
         android:scaleType="centerCrop"
         android:src="@drawable/agarwal" />
     <LinearLayout
@@ -125,5 +129,6 @@
         android:paddingBottom="12dp"
 
         android:id="@+id/SignIn"/>
-    </RelativeLayout>
+</RelativeLayout>
+    </ScrollView>
 
