--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,36 @@
 
     </style>
 
+
+
+
+    <style name="TextViewUserContent">
+
+<item name="android:layout_width">wrap_content</item>
+
+<item name="android:layout_height">wrap_content</item>
+
+<item name="android:textSize">18sp</item>
+
+<item name="android:textColor">#00FFFF</item>
+
+<item name="android:layout_marginLeft">5dp</item>
+
+<item name="android:layout_marginBottom">3dp</item>
+
+</style>
+    <style name="TextViewUserHeader">
+
+    <item name="android:layout_width">wrap_content</item>
+
+    <item name="android:layout_height">wrap_content</item>
+
+    <item name="android:textSize">18sp</item>
+
+    <item name="android:textColor">#008000</item>
+
+    <item name="android:layout_marginBottom">3dp</item>
+
+</style>
+
 </resources>
